Finished publish and confirm post

--- a/src/index.css
+++ b/src/index.css
@@ -47,19 +47,19 @@ input {
 }
 
 #loader {
-  position: absolute;
+  position: fixed;
   left: 50%;
   top: 50%;
   z-index: 1;
-  width: 120px;
-  height: 120px;
-  margin: -76px 0 0 -76px;
+  width: 100px;
+  height: 100px;
+  margin: -76px 0 0 -45px;
   border: 16px solid #f3f3f3;
   border-radius: 50%;
-  border-top: 16px solid #3498db;
-  -webkit-animation: spin 2s linear infinite;
-  animation: spin 2s linear infinite;
-  animation-duration: 1s;
+  border-top: 16px solid black;
+  -webkit-animation: spin 4s linear infinite;
+  animation: spin 4s linear infinite;
+  animation-duration: 2s;
 }
 
 @-webkit-keyframes spin {
