--- a/src/index.css
+++ b/src/index.css
@@ -34,7 +34,7 @@ input {
   background: #73AD21;
   padding: 20px;
   width: 200px;
-  height: 150px; 
+  height: 150px;
 }
 
 .form-group {
@@ -44,6 +44,11 @@ input {
 
 .MuiButton-text {
   text-transform: unset !important;
+}
+
+.homebutton {
+  background-color: grey;
+  z-index: 2;
 }
 
 #loader {
